# OpenBikeSensor_Analysis

./: README.md  pyproject.toml
code/: getHighwaysOSM.ipynb  getPublicData_portale.ipynb  getPublicData_portale_v02.ipynb  obs_publicData_leftRight_v02.ipynb  osmconf_radZuNah.ini
code/monitoring/: gdf_vn_wetter.geojson
code/monitoring/weather_temperature/: createVoronoiFromDWDweatherStations_OBSv02.ipynb  gdf_vn_wetter_points.geojson  obs_publicData_overview_v04_WETTER.ipynb
code/publicdata_analysis/: obs_publicData_OSM_analysis_Germany_v03.ipynb  obs_publicData_leftRight_v03.ipynb  obs_publicData_overview_v03.ipynb
code/rawdata_analysis/: myFirstOBSanalysis.ipynb
cottbus/: events_cottbus.csv  events_cottbus.geojson  handle_jsonExportPortal_v03_cottbus.ipynb
cottbus/.ipynb_checkpoints/: handle_jsonExportPortal_v03_cottbus-checkpoint.ipynb
data/export_portal/: 230201_portalSnap_adfc-ac.geojson  230201_portalSnap_adfc-luebeck.geojson  230201_portalSnap_adfc-osnabrueck.geojson  230201_portalSnap_obs-portal-koeln.geojson  230201_portalSnap_portal-1meter50-at.geojson  events_221107_essen.geojson
data/export_portal/alt/: events_221107_os.geojson
data/raw_data_sample/: 2022-02-19T12.58.59-b8cf.obsdata.csv
viz/: myFirstOBSanalysis.html  mySecondOBSanalysis_fixedWrongSonicValues.html
