[tool.poetry]
name = "openbikesensor-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.8"
pandas = "^2.1.3"
geopandas = "^0.14.1"
tqdm = "^4.66.1"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
contextily = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
